--- a/data/index.htm
+++ b/data/index.htm
@@ -1,18 +1,17 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>DoggyTalk home</title>
-    <style type="text/css">
-        body {font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 0.8em;}
-        .label {display: inline;}
-    </style>
+    <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body class="py-4">
     <h1>DoggyTalk</h1>
     <form action="#" method="POST">
         {{VOLUME_INPUT}}
-        <div><input type="submit" value="Save"/></div>
+        <div><input type="submit" value="Save" /></div>
     </form>
     {{CONTENT}}
     <div><a href="_ac">Go to WiFi Config page</a></div>
